feat: add new version of analysis operations
